--- a/WebCommon/Components/Common/Editor/GetVariableModal.razor.css
+++ b/WebCommon/Components/Common/Editor/GetVariableModal.razor.css
@@ -1,5 +1,5 @@
 .gvm-box {
-    width: 26rem;
+    width: 34rem;
     max-width: 92vw;
 }
 
