--- a/WebCommon/Components/Common/Editor/RegisterVariableModal.razor.css
+++ b/WebCommon/Components/Common/Editor/RegisterVariableModal.razor.css
@@ -1,5 +1,5 @@
 .rvm-box {
-    width: 30rem;
+    width: 44rem;
     max-width: 92vw;
 }
 
