--- a/WebCommon/Components/Common/Editor/SetVariableModal.razor.css
+++ b/WebCommon/Components/Common/Editor/SetVariableModal.razor.css
@@ -1,5 +1,5 @@
 .svm-box {
-    width: 26rem;
+    width: 44rem;
     max-width: 92vw;
 }
 
