--- a/WebCommon/Components/Common/Editor/UnregisterVariablePickerModal.razor.css
+++ b/WebCommon/Components/Common/Editor/UnregisterVariablePickerModal.razor.css
@@ -1,5 +1,5 @@
 .uvp-box {
-    width: 24rem;
+    width: 30rem;
     max-width: 92vw;
 }
 
